non-sticky search for mobile, fix spacing of spinner on mobile

--- a/src/Components/css/Search.css
+++ b/src/Components/css/Search.css
@@ -26,6 +26,11 @@
     }
 
     .search {
-        padding: 1.5em 0 0 0;
+        position: initial;
+        padding: 1.5em 0 0.75em 0;
+    }
+
+    .search .spinner.invisible {
+        display: none;
     }
 }
